force-app/main/default/objects/Car_Parking_Charge__c/Car_Parking_Charge__c.object-meta.xml
<CustomObject>
    <label>Car Parking</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Car Parking Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Parking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>