force-app/main/default/objects/Car_Parking_Charge__c/fields/Car_Parking_Allotment__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Allotment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Parking Allotment</label>
    <referenceTo>Car_Parking_Allotment__c</referenceTo>
    <relationshipLabel>Car Parking</relationshipLabel>
    <relationshipName>Car_Parking</relationshipName>
    <type>Lookup</type>
</CustomField>