force-app/main/default/objects/Car_Parking_Charge__c/fields/Car_Parking_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Number__c</fullName>
    <label>Car Parking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>