force-app/main/default/objects/Car_Parking_Charge__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Car</fullName>
            </value>
            <value>
                <fullName>Small Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>