force-app/main/default/objects/Car_Parking_Charge__c/fields/Floor_Podium_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_Podium_No__c</fullName>
    <label>Floor/Podium No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>