force-app/main/default/objects/Car_Parking_Charge__c/fields/No_Of_Big_Car_Available__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Big_Car_Available__c</fullName>
    <label>No. Of Big Car Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>