force-app/main/default/objects/Car_Parking_Charge__c/fields/No_Of_Remaining_Small_Car__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Remaining_Small_Car__c</fullName>
    <formula>No_Of_Small_Car_Available__c - No_Of_Small_Car_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Remaining Small Car</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>