force-app/main/default/objects/Car_Parking_Charge__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Covered Stack</fullName>
            </value>
            <value>
                <fullName>MLCP</fullName>
            </value>
            <value>
                <fullName>Podium</fullName>
            </value>
            <value>
                <fullName>Puzzle Car Park</fullName>
            </value>
            <value>
                <fullName>Single Covered</fullName>
            </value>
            <value>
                <fullName>Single Open</fullName>
            </value>
            <value>
                <fullName>Stack</fullName>
            </value>
            <value>
                <fullName>Stilt</fullName>
            </value>
            <value>
                <fullName>Tandem Covered</fullName>
            </value>
            <value>
                <fullName>Tandem Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>