force-app/main/default/objects/Car_Parking_Charge__c/fields/Parking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parking_Amount__c</fullName>
    <label>Parking Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>