force-app/main/default/objects/Car_Parking_Charge__c/fields/Parking_Slot_No__c.field-meta.xml
<CustomField>
    <fullName>Parking_Slot_No__c</fullName>
    <label>Parking Slot No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>