force-app/main/default/objects/Car_Parking_Charge__c/fields/Small_Car_Charge__c.field-meta.xml
<CustomField>
    <fullName>Small_Car_Charge__c</fullName>
    <label>Small Car Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>