force-app/main/default/objects/Car_Parking_Charge__c/fields/Width_of_Car_Park_in_ft__c.field-meta.xml
<CustomField>
    <fullName>Width_of_Car_Park_in_ft__c</fullName>
    <label>Width of Car Park in ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>