force-app/main/default/objects/Car_Parking_Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>